--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,531;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,560;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,531;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,560;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,531;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,560;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,531;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,560;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 body {
   font-family: "Exo 2", sans-serif; }
 
@@ -34,7 +35,7 @@ h4 {
     position: relative; }
 
 .headerspace {
-  height: 66px; }
+  height: 75px; }
 
 /* colors start */
 .text-gray {
@@ -49,18 +50,30 @@ h4 {
   border-color: #d6d8d8 !important; }
 
 .text-primary {
-  color: #21548f !important; }
+  color: #383d45 !important; }
 
 .btn-primary,
 .bg-primary {
-  background-color: #21548f !important; }
+  background-color: #383d45 !important; }
 
 .btn-primary,
 .border-primary {
+  border-color: #383d45 !important; }
+
+.text-secondary {
+  color: #21548f !important; }
+
+.btn-secondary,
+.bg-secondary {
+  background-color: #21548f !important; }
+
+.btn-secondary,
+.border-secondary {
   border-color: #21548f !important; }
 
 .btn-gray,
-.btn-primary {
+.btn-primary,
+.btn-secondary {
   color: #fff !important; }
 
 /* colors end */
@@ -82,8 +95,15 @@ h4 {
       padding-left: 20px;
       padding-right: 20px; }
     .mainheader .nav-item .dropdown-item:hover {
-      background-color: #21548f;
+      background-color: #383d45;
       color: #fff; }
+
+@media (max-width: 992px) {
+  .mainheader .nav-item .nav-link,
+  .mainheader .nav-item .btn,
+  .mainheader .nav-item .dropdown-item {
+    text-align: center;
+    width: 100%; } }
 
 /* header end */
 /* Footer start */
@@ -103,8 +123,8 @@ img.footerlogo {
     height: 60%;
     background: linear-gradient(to top, #fff, rgba(255, 255, 255, 0)); }
 
-.mt--200 {
-  margin-top: -200px; }
+.mt--100 {
+  margin-top: -100px; }
 
 .dividerbr {
   display: inline-block;
@@ -127,3 +147,14 @@ img.footerlogo {
 
 .testimonials-author {
   font-size: 16px; }
+
+/* Responsive Start */
+@media (max-width: 767px) {
+  .h3,
+  h3 {
+    font-size: 1.4rem !important; }
+  .homebanner {
+    min-height: 17rem;
+    position: relative; } }
+
+/* Responsive end */
