--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,5 +10,5 @@ $dgrayColor: #383d45;
 $grayColor: #d6d8d8;
 $headerheight: 75px;
 
-$primaryColor: $lblueColor;
-$secondaryColor: $dgrayColor;
+$primaryColor: $blueColor;
+$secondaryColor: $skyColor;
