--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,8 +9,12 @@ body {
 }
 
 .h4,
-h4 {
-  font-weight: 400;
+h4,
+h3,
+.h3,
+h2,
+.h2 {
+  font-weight: 600;
 }
 
 .border-md {
@@ -100,6 +104,11 @@ h4 {
 
 .testimonials-author {
   font-size: 16px;
+}
+
+b.font2 {
+  font-weight: 700;
+  font-size: 19px;
 }
 
 .cstm-card {
