--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Economica:ital,wght@0,400;0,700;1,400;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 @import './mixins';
 
 body {
@@ -8,8 +10,6 @@ body {
   font-family: $themefont2;
 }
 
-.h4,
-h4,
 h3,
 .h3,
 h2,
