--- a/css/style.css
+++ b/css/style.css
@@ -1,84 +1,99 @@
-@import url("https://fonts.googleapis.com/css2?family=Economica:ital,wght@0,400;0,700;1,400;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Economica:ital,wght@0,400;0,700;1,400;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Economica:ital,wght@0,400;0,700;1,400;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Economica:ital,wght@0,400;0,700;1,400;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Economica:ital,wght@0,400;0,700;1,400;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 body {
-  font-family: "Lato", sans-serif; }
+  font-family: 'Lato', sans-serif;
+}
 
 .font2 {
-  font-family: "Economica", sans-serif; }
+  font-family: 'Economica', sans-serif;
+}
 
-.h4,
-h4,
 h3,
 .h3,
 h2,
 .h2 {
-  font-weight: 600; }
+  font-weight: 600;
+}
 
 .border-md {
-  border-width: 4px !important; }
+  border-width: 4px !important;
+}
 
 .bgcover {
   background-size: cover;
-  background-position: center center; }
+  background-position: center center;
+}
 
 .bgfixed {
-  background-attachment: fixed; }
+  background-attachment: fixed;
+}
 
 .bgoverlay {
-  position: relative; }
-  .bgoverlay::before {
-    position: absolute;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #000; }
-  .bgoverlay > * {
-    position: relative; }
+  position: relative;
+}
+.bgoverlay::before {
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+}
+.bgoverlay > * {
+  position: relative;
+}
 
 .headerspace {
-  height: 75px; }
+  height: 75px;
+}
 
 /* colors start */
 .text-gray {
-  color: #d6d8d8 !important; }
+  color: #d6d8d8 !important;
+}
 
 .btn-gray,
 .bg-gray {
-  background-color: #d6d8d8 !important; }
+  background-color: #d6d8d8 !important;
+}
 
 .btn-gray,
 .border-gray {
-  border-color: #d6d8d8 !important; }
+  border-color: #d6d8d8 !important;
+}
 
 .text-primary {
-  color: #294075 !important; }
+  color: #294075 !important;
+}
 
 .btn-primary,
 .bg-primary {
-  background-color: #294075 !important; }
+  background-color: #294075 !important;
+}
 
 .btn-primary,
 .border-primary {
-  border-color: #294075 !important; }
+  border-color: #294075 !important;
+}
 
 .text-secondary {
-  color: #85bcd8 !important; }
+  color: #85bcd8 !important;
+}
 
 .btn-secondary,
 .bg-secondary {
-  background-color: #85bcd8 !important; }
+  background-color: #85bcd8 !important;
+}
 
 .btn-secondary,
 .border-secondary {
-  border-color: #85bcd8 !important; }
+  border-color: #85bcd8 !important;
+}
 
 .btn-gray,
 .btn-primary,
 .btn-secondary {
-  color: #fff !important; }
+  color: #fff !important;
+}
 
 /* colors end */
 /* header start */
@@ -86,100 +101,124 @@ h2,
   position: fixed;
   width: 100%;
   left: 0;
-  z-index: 9999; }
-  .mainheader img.logo-img {
-    max-width: 100px; }
-  .mainheader .nav-item {
-    padding: 5px; }
-    .mainheader .nav-item .nav-link,
-    .mainheader .nav-item .btn {
-      padding-top: 7px;
-      padding-bottom: 7px; }
-    .mainheader .nav-item .btn {
-      padding-left: 20px;
-      padding-right: 20px; }
-    .mainheader .nav-item .dropdown-item:hover {
-      background-color: #294075;
-      color: #fff; }
+  z-index: 9999;
+}
+.mainheader img.logo-img {
+  max-width: 100px;
+}
+.mainheader .nav-item {
+  padding: 5px;
+}
+.mainheader .nav-item .nav-link,
+.mainheader .nav-item .btn {
+  padding-top: 7px;
+  padding-bottom: 7px;
+}
+.mainheader .nav-item .btn {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.mainheader .nav-item .dropdown-item:hover {
+  background-color: #294075;
+  color: #fff;
+}
 
 @media (max-width: 992px) {
   .mainheader .nav-item .nav-link,
   .mainheader .nav-item .btn,
   .mainheader .nav-item .dropdown-item {
     text-align: center;
-    width: 100%; } }
+    width: 100%;
+  }
+}
 
 /* header end */
 /* Footer start */
 img.footerlogo {
-  max-width: 150px; }
+  max-width: 150px;
+}
 
 /* Footer end */
 .homebanner {
   min-height: 35rem;
-  position: relative; }
-  .homebanner::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 60%;
-    background: linear-gradient(to top, #fff, rgba(255, 255, 255, 0)); }
+  position: relative;
+}
+.homebanner::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 60%;
+  background: linear-gradient(to top, #fff, rgba(255, 255, 255, 0));
+}
 
 .mt--100 {
-  margin-top: -100px; }
+  margin-top: -100px;
+}
 
 .dividerbr {
   display: inline-block;
   height: 2px;
   background-color: #85bcd8;
-  width: 110px; }
+  width: 110px;
+}
 
 .personimg {
   height: 100px;
   width: 100px;
   object-fit: cover;
-  border-radius: 50%; }
+  border-radius: 50%;
+}
 
 .testimonials-container {
-  max-width: 800px; }
+  max-width: 800px;
+}
 
 .testimonials-quote {
   font-size: 18px;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+}
 
 .testimonials-author {
-  font-size: 16px; }
+  font-size: 16px;
+}
 
 b.font2 {
   font-weight: 700;
-  font-size: 19px; }
+  font-size: 19px;
+}
 
 .cstm-card {
   position: relative;
   overflow: hidden;
-  border-radius: 14px; }
-  .cstm-card::before {
-    content: '';
-    height: 200px;
-    width: 200px;
-    border-radius: 50%;
-    background-color: #294075;
-    position: absolute;
-    top: -93px;
-    opacity: 0.4;
-    right: -47px; }
-  .cstm-card > * {
-    position: relative; }
+  border-radius: 14px;
+}
+.cstm-card::before {
+  content: '';
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  background-color: #294075;
+  position: absolute;
+  top: -93px;
+  opacity: 0.4;
+  right: -47px;
+}
+.cstm-card > * {
+  position: relative;
+}
 
 /* Responsive Start */
 @media (max-width: 767px) {
   .h3,
   h3 {
-    font-size: 1.4rem !important; }
+    font-size: 1.4rem !important;
+  }
   .homebanner {
     min-height: 17rem;
-    position: relative; } }
+    position: relative;
+  }
+}
 
 /* Responsive end */
