--- a/css/style1.css
+++ b/css/style1.css
@@ -172,6 +172,7 @@ img.footerlogo {
 .personimg {
   height: 100px;
   width: 100px;
+  min-width: 100px;
   object-fit: cover;
   border-radius: 50%;
 }
