--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -61,6 +61,7 @@
 // btn color
 .btn-gray,
 .btn-primary,
-.btn-secondary {
+.btn-secondary,
+.btn-outline-secondary {
   color: #fff !important;
 }
