--- a/scss/style.scss
+++ b/scss/style.scss
@@ -61,10 +61,48 @@ h2,
 @import './footer';
 /* Footer end */
 
+/* Animation start*/
+.heartBeat {
+  animation-name: initial;
+  &:hover {
+    animation-name: heartBeat;
+  }
+}
+
+.pulse {
+  animation-name: initial;
+  &:hover {
+    animation-name: pulse;
+  }
+}
+
+.jello {
+  animation-name: initial;
+  &:hover {
+    animation-name: jello;
+  }
+}
+
+.bounceInRight {
+  animation-name: initial;
+  &:hover {
+    animation-name: bounceInRight;
+  }
+}
+
+.fadeInDown {
+  animation-name: initial;
+  &:hover {
+    animation-name: fadeInDown;
+  }
+}
+
+/* Animation End */
+
 .homebanner {
   min-height: 35rem;
   position: relative;
-  &::after {
+  &::before {
     content: '';
     position: absolute;
     bottom: 0;
@@ -72,6 +110,15 @@ h2,
     width: 100%;
     height: 60%;
     background: linear-gradient(to top, #fff, rgba(255, 255, 255, 0));
+  }
+  > .btn {
+    position: relative;
+    margin-top: auto;
+    margin-bottom: 50px;
+    padding-left: 30px;
+    font-size: 20px;
+    line-height: 35px;
+    padding-right: 30px;
   }
 }
 
